# MACE-FFLAME-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: 1-run_ligand.py  2-run_mof.py  3-run_sample.py  4-finetune.sh  5-eval.py  config.yaml
experiments/data/ligand/: example_lk_0.xyz  example_lk_0_addh.xyz  example_lk_0_opt.xyz  example_lk_1.xyz  example_lk_1_addh.xyz  example_lk_1_opt.xyz
experiments/data/ligand/md/: lk0_100K.xyz  lk0_300K.xyz  lk0_500K.xyz  lk0_600K.xyz  lk1_100K.xyz  lk1_300K.xyz  lk1_500K.xyz  lk1_600K.xyz
experiments/data/ligand/opt/: lk0_10_opt.xyz  lk0_15_opt.xyz  lk0_16_opt.xyz  lk0_22_opt.xyz  lk0_23_opt.xyz  lk0_24_opt.xyz  lk0_29_opt.xyz  lk0_32_opt.xyz  lk0_5_opt.xyz  lk0_6_opt.xyz  lk1_16_opt.xyz  lk1_18_opt.xyz  lk1_19_opt.xyz  lk1_1_opt.xyz  lk1_25_opt.xyz  lk1_28_opt.xyz  lk1_34_opt.xyz  lk1_39_opt.xyz  lk1_3_opt.xyz  lk1_4_opt.xyz
experiments/data/mof/: train.xyz
experiments/data/mof/md_npt/: example_100K_1.0bar_npt.xyz  example_100K_1.0bar_nvt.xyz  example_300K_1.0bar_npt.xyz  example_300K_1.0bar_nvt.xyz  example_500K_1.0bar_npt.xyz  example_500K_1.0bar_nvt.xyz  example_600K_1.0bar_npt.xyz  example_600K_1.0bar_nvt.xyz
experiments/data/mof/md_nvt/: example_100K.xyz  example_300K.xyz  example_500K.xyz  example_600K.xyz
experiments/model/data/: run_train.xyz
fflame/fflame/: eval.py
fflame/fflame/cell/: __init__.py  builder.py  scissors.py
fflame/fflame/sample/: selection.py
fflame/fflame/simulation/: md.py  mol.py
tests/: test_scissors.py  test_selection.py
